# cexception

./: .gitignore  Makefile.am  README.md  configure.ac  makefile
cexception/: cexception.c  makefile
src/: cexception.c  cexception.h
tst/: cexception-test.cc  makefile  unit-test
